$Id: History,v 1.62 2002-07-23 09:09:16 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Jul  23rd, 2002   G. Cosmo - field-V04-01-00
--------------------------
- G4MagIntegratorDriver.cc: cleared warning of unused variable.
  Protected variable 'nStpPr' with G4DEBUG_FIELD.
- Updated reference outputs and some other updates to unit tests.

Jun  25th, 2002   J. Apostolakis - field-V04-00-05
--------------------------------
- G4ChordFinder.cc
  In NewStep:  fixed case of stepTrial >> stepTrialOld, to take large multiple - not small;
       (it was treated the same as stepTrial << old)
  Added guard for stepTrial==0.0 in FindNextChord
- G4MagIntegratorDriver.cc
  Added protection against error of 0.0 in ComputeNewStepSize.

- G4EquationOfMotion
  Made RightHandSide an inline method 
  In GetFieldValue signature of Point is double[4], instead of double[3]
  Defined G4maximum_number_of_field_components as enum

Jun   7th, 2002   J. Apostolakis - field-V04-00-04
--------------------------------
 - G4Mag_SpinEqRhs.cc
    o Fix to momentum component of Rhs.

May  31st, 2002   J. Apostolakis - field-V04-00-03
--------------------------------
 - G4MagHelicalStepper.icc