@@ -21,32 +21,28 @@
 // ********************************************************************
 //
 //
-// $Id: G4FieldManager.cc,v 1.6 2001-11-28 18:44:43 japost Exp $
+// $Id: G4FieldManager.cc,v 1.7 2002-07-24 10:43:38 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 #include "G4FieldManager.hh"
 
 G4FieldManager::G4FieldManager()
+   : fDetectorField(0), fChordFinder(0), fAllocatedChordFinder(false),
+     fFieldChangesEnergy(false), fDefault_Delta_One_Step_Value(0.25*mm),
+     fDefault_Delta_Intersection_Val(0.1*mm)
 { 
-   fDetectorField= 0;
-   fAllocatedChordFinder= false;
-
    fDelta_One_Step_Value= fDefault_Delta_One_Step_Value;
    fDelta_Intersection_Val= fDefault_Delta_Intersection_Val;
-
-   fFieldChangesEnergy= false;
 }
 
 G4FieldManager::G4FieldManager(G4MagneticField *detectorField)
+   : fDetectorField(detectorField), fAllocatedChordFinder(true),
+     fFieldChangesEnergy(false), fDefault_Delta_One_Step_Value(0.25*mm),
+     fDefault_Delta_Intersection_Val(0.1*mm)
 {
-   fDetectorField= detectorField;
-
-   this->CreateChordFinder(detectorField);
-
+   fChordFinder= new G4ChordFinder( detectorField );
    fDelta_One_Step_Value= fDefault_Delta_One_Step_Value;
    fDelta_Intersection_Val= fDefault_Delta_Intersection_Val;
-
-   fFieldChangesEnergy= false;
 }
 
 
