@@ -1,4 +1,4 @@
-$Id: History,v 1.62 2002-07-23 09:09:16 gcosmo Exp $
+$Id: History,v 1.63 2002-07-24 10:43:22 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jul  24th, 2002   G. Cosmo - field-V04-01-01
+- G4FieldManager[.hh.cc]: made fDefault_Delta_One_Step_Value and
+  fDefault_Delta_Intersection_Val normal constants (not static) to
+  resolve initialisation problems. Coworks with tag "geomvol-V04-01-01".
+  Fixes problem report #383.
 
 Jul  23rd, 2002   G. Cosmo - field-V04-01-00
 --------------------------
